[package]
name = "percentage-changed-calculator"
version = "0.0.0-semantic-release-configured"
edition = "2021"
authors = ["Eric Crosson <eric.s.crosson@utexas.edu>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/EricCrosson/percentage-changed-calculator"
homepage = "https://github.com/EricCrosson/percentage-changed-calculator"
description = "Calculate the percentage relationship between numbers"
keywords = ["cli", "percentage", "percent", "change"]
categories = ["command-line-utilities"]
exclude = [
  "/.envrc",
  "/.github",
  "/flake.{lock,nix}",
  "/nix"
]
# TODO: add GitHub Actions workflows. Is ncurses installed by default on GitHub-hosted runners?

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "=0.27.0"
ratatui = "=0.28.0"
tui-textarea = "=0.6.1"

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[profile.release]
lto = true
codegen-units = 1
strip = true
